--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "loanvendorcontacts",
   "version": "1.0.0",
+  "homepage": ".",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,10 +10,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^18.0.1",
     "expo": "~48.0.15",
+    "expo-checkbox": "^2.3.1",
+    "expo-font": "^11.1.1",
+    "expo-splash-screen": "^0.18.2",
     "expo-status-bar": "~1.4.4",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal": "^13.0.1",
+    "react-native-table-component": "^1.2.2",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
