--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
+    "react-native-searchable-dropdown": "^1.1.3",
     "react-native-table-component": "^1.2.2",
     "react-native-web": "~0.18.10"
   },
