--- a/package.json
+++ b/package.json
@@ -21,15 +21,24 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-dropdown-picker": "^5.4.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
-    "react-native-searchable-dropdown": "^1.1.3",
     "react-native-table-component": "^1.2.2",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "configureWebpack":{
+    "performance": {
+      "hints": false
+    },
+    "optimization": {
+      "splitChunks": {
+        "minSize": 10000,
+        "maxSize": 250000
+      }
+    }
+}
 }
