--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.71.8",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
+    "react-native-select-dropdown": "^3.3.4",
     "react-native-table-component": "^1.2.2",
     "react-native-web": "~0.18.10"
   },
